[gd_scene load_steps=14 format=3 uid="uid://b8k8iocmkewgs"]

[ext_resource type="Script" path="res://Towers/alchemist_tower.gd" id="1_xpa74"]
[ext_resource type="Texture2D" uid="uid://tg1qqpi86ncg" path="res://Sprites/apprentice_mage_tower.png" id="2_i6rx5"]
[ext_resource type="PackedScene" uid="uid://bm1lx0f26sxeu" path="res://Towers/fire_homunculus.tscn" id="2_qceng"]
[ext_resource type="Texture2D" uid="uid://b2seinqkha202" path="res://Sprites/fire_alchemist.png" id="4_j84nr"]
[ext_resource type="Texture2D" uid="uid://cbsketdhsy2bp" path="res://Sprites/fire_alchemist_banner.png" id="5_n1ykf"]
[ext_resource type="Texture2D" uid="uid://dot8fms7d3cku" path="res://Sprites/flag.png" id="6_4m4cl"]
[ext_resource type="Script" path="res://Towers/flag.gd" id="6_7uynu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_umy21"]
radius = 75.0
height = 200.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hageb"]
radius = 15.0
height = 45.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6n4wt"]
radius = 30.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1k0b2"]
radius = 7.0
height = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqp45"]
bg_color = Color(0.913725, 0.427451, 0.431373, 0.466667)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bdeqn"]
radius = 4.0
height = 10.0

[node name="AlchemistTower" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_xpa74")
homunculusAsset = ExtResource("2_qceng")

[node name="ApprenticeMageTower" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_i6rx5")

[node name="Alchemist" type="Sprite2D" parent="ApprenticeMageTower"]
position = Vector2(0, -39)
texture = ExtResource("4_j84nr")

[node name="ShotPoint" type="Marker2D" parent="."]
position = Vector2(20, -29)

[node name="Range" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="RangeCollisison" type="CollisionShape2D" parent="Range"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_umy21")

[node name="Aim" type="Marker2D" parent="."]

[node name="ProjectileContainer" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hageb")

[node name="AlchemistBanner" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("5_n1ykf")

[node name="Flag" type="CharacterBody2D" parent="." node_paths=PackedStringArray("range")]
position = Vector2(0, 35)
collision_layer = 8
script = ExtResource("6_7uynu")
range = NodePath("../Range")

[node name="FlagSprite" type="Sprite2D" parent="Flag"]
position = Vector2(8, -8)
texture = ExtResource("6_4m4cl")

[node name="AggroRange" type="Area2D" parent="Flag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag/AggroRange"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6n4wt")

[node name="DragHandle" type="Area2D" parent="Flag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag/DragHandle"]
z_index = 1
position = Vector2(3, -7)
shape = SubResource("CapsuleShape2D_1k0b2")

[node name="PlacementAreaIndicator" type="Panel" parent="Flag"]
z_index = -2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 16)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tqp45")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bdeqn")

[node name="Area2D" type="Area2D" parent="Flag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag/Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bdeqn")

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_shape_exited" from="Range" to="." method="_on_range_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Flag/AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="Flag/AggroRange" to="." method="_on_aggro_range_body_exited"]
[connection signal="input_event" from="Flag/DragHandle" to="Flag" method="_on_drag_handle_input_event"]
